# openbook

./: .gitignore  BookScraper.py  books.json  main.py  pdfs.py  pyproject.toml  test.ipynb
